Refactor sync managers and add suppress warnings
Added @SuppressWarnings("unused") to several classes for cleaner compilation. Refactored code in EntityPlayerSyncManager and PlayerSyncManager to remove unused fields and simplify logic. Improved async chunk restoration in ChunkSnapshotSyncHandler and updated SpawnUtil to use getFirst() for world selection. Minor code cleanup and removal of redundant imports.